refactor(frontend): update project layout for QA review

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -75,7 +75,10 @@
                         <div class="form-group-inline">
                             <label for="documentType">Tipo de Documento</label>
                             <select id="documentType" name="documentType">
-                                <option value="">Cargando...</option>
+                                <option value="1">CC - Cédula de Ciudadanía</option>
+                                <option value="2">TI - Tarjeta de Identidad</option>
+                                <option value="3">CE - Cédula de Extranjería</option>
+                                <option value="4">PA - Pasaporte</option>
                             </select>
                         </div>
                         <div class="form-group-inline flex-grow">
